--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview",
     "prettier": "prettier --write .",
     "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "commit": "cz"
   },
   "husky": {
     "hooks": {
@@ -30,6 +31,8 @@
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@types/node": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
